2025-12-09T02:05:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20049380610 # 833
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-09
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 205 272 / 206 273
* notice: next accum: outdated-unq outdated-all / unq all: 205 272 / 208 275
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-08]

2025-12-05T02:05:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19950243304 # 829
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 204 271 / 205 272
* notice: next accum: outdated-unq outdated-all / unq all: 205 272 / 206 273
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-10] / [2025-12-04]

2025-11-18T02:01:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19451293523 # 812
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-18
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 203 270 / 205 272
* notice: next accum: outdated-unq outdated-all / unq all: 204 271 / 205 272
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-03] / []

2025-11-15T01:57:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19382640714 # 809