@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-09T02:05:44Z",
+  "timestamp" : "2025-12-11T02:09:24Z",
   "count_outdated" : 272,
   "uniques_outdated" : 205,
-  "count" : 275,
-  "uniques" : 208,
+  "count" : 276,
+  "uniques" : 209,
   "clones" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
